--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
 			<div class="log-container" id="log"></div>
 		</fieldset>
 		<fieldset>
-			<legend>设备控制</legend>
+			<legend>Mode</legend>
 			<div class="flex-container">
 				<div class="flex-group">
 					<button id="calendarmodebutton" type="button" class="primary" onclick="syncTime(1)">日历模式</button>
@@ -165,7 +165,7 @@
 							<option value="#FFFFFF">白色</option>
 						</select>
 						<label for="brush-size">粗细:</label>
-						<input type="number" id="brush-size" value="2" min="1" max="100">
+						<input type="number" id="brush-size" value="20" min="1" max="100">
 					</div>
 				</div>
 				<div class="flex-container canvas-tools">
