--- a/html/index.html
+++ b/html/index.html
@@ -252,7 +252,7 @@ function getWeatherEmoji(code) {
     if (c >= 62 && c <= 65) return "🌧️";
     if (c >= 70 && c <= 77) "🌝";
     if (c >= 80 && c <= 85) return "🌫️";
-    if (c >= 90 && c <= 93) return "⛈️";
+    if (c >= 90 && c <= 93) return "❄";
     return "❓";
 }
 
